k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idea-randomizer-service
spec:
  selector:
    app: idea-randomizer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
